# reclass-model

./: .gitignore  README.md  environment_audit.md  gap.md  limitations.md  overview.md  plan.md  proposal.md  research.md  roadmap.md
.github/workflows/: ci.yml
ReClass Model/: .dockerignore  00-orchestrator-agent.md  00-overview.md  README.md  cli.py  limitations.md  manifest.md  pyproject.toml  reclass_version.py  requirements.txt  scoring.py  validation_report.md
ReClass Model/api/: __init__.py  app.py  audit.py  auth.py  authz.py  cookbook_examples.py  deps.py  evidence_resolver.py  generated_client.py  observability.py  oidc.py  openapi.json  openapi_contract.py  ratelimit.py  requirements.txt  schemas.py  service.py  settings.py  store.py  webhooks.py
ReClass Model/api/routers/: __init__.py  admin.py  alerts.py  audit.py  classifications.py  classify.py  evidence.py  reanalysis.py  reports.py  validation.py  webhooks.py  worklist.py
ReClass Model/data/cache/providers/: README.md
ReClass Model/data/raw/: README.md  clinvar_GRCh38.vcf.gz.md5
ReClass Model/data/reference/: GRCh38.fa.meta.json  GRCh38.source.json  README.md  install_grch38.sh
ReClass Model/db/: __init__.py  apply.py  schema.sql
ReClass Model/deploy/: Dockerfile  __init__.py  backup.sh  docker-compose.yml  restore.sh
ReClass Model/deploy/migrations/: 001_audit_log.sql  002_classification_evidence.sql  003_evidence_workbench.sql  004_release_gate_reanalysis.sql  005_platform_security.sql  006_worklist_cases.sql  007_force_rls.sql
ReClass Model/docs/: api_cookbook.md  auth.md  clinical_review.md  conflict_handling.md  data_governance.md  deployment.md  evidence_workbench.md  operations_sop.md  release_policy.md  release_review.md
ReClass Model/engine/: __init__.py  config.py  config_registry.py  normalize.py  reference.py  reference_cache.py  scoring.py
ReClass Model/engine/configs/: base_v1.json  computational_ext_v1.json  coverage_ext_v1.json
ReClass Model/evidence/: __init__.py  alphamissense.py  cache_manifest.py  clingen.py  computational.py  coverage.py  criteria_ext.py  curation.py  enrich_clinvar.py  gnomad.py  model.py  providers.py  revel.py  upstream.py  workbench.py
ReClass Model/frontend/: __init__.py  app.js  index.html  styles.css  workbench.css  workbench.html  workbench.js
ReClass Model/frontend/tests/: test.html
ReClass Model/ingest/: README.md  batch_import.py  clingen_to_benchmark.py  clinvar_to_benchmark.py  cohort_to_evidence.py  csv_import.py  enrich_gnomad.py  enrich_revel.py  hgvs.py  identity_audit_report.py  vcf_import.py
ReClass Model/monitoring/: __init__.py  diff.py  reanalysis.py
ReClass Model/ops/: __init__.py  onboarding.py  queue.py  repo_guard.py  run_report.py  scheduler.py  verify_distribution.py
ReClass Model/reporting/: __init__.py  common.py  fhir.py  render.py  reviewer.py  summary.py
ReClass Model/storage/: __init__.py  admin.py  alerts.py  classifications.py  db.py  evidence.py  verify.py  webhooks.py  worklist.py
ReClass Model/tests/: test_alert_triage.py  test_analytical_validation.py  test_analyze_failures.py  test_api.py  test_api_contract.py  test_audit.py  test_auth.py  test_batch_import.py  test_cache_manifest.py  test_calibration.py  test_cli.py  test_clingen_evidence.py  test_clinvar_enrichment.py  test_compare_reports.py  test_computational_providers.py  test_criteria_ext_provider.py  test_curation.py  test_db_migrations.py  test_engine.py  test_enrich_hgvs.py  test_evidence_coverage.py  test_evidence_model.py  test_fhir.py  test_gnomad_provider.py  test_harness_summary.py  test_holdout_partition.py  test_identity_routes.py  test_integration_wiring.py  test_normalize_reference.py  test_oidc.py  test_onboarding.py  test_ops.py  test_preflight.py  test_ratelimit.py  test_reanalysis.py  test_reanalysis_operations.py  test_reference_cache.py  test_release_gate.py  test_release_packet.py  test_reporting.py  (+10 more)
ReClass Model/validation/: __init__.py  analytical_validation.py  analyze_failures.py  build_fixtures.py  calibration.py  compare_reports.py  conflict_policy.py  fixture_splits.py  harness.py  holdout_eval.py  plots.py  preregistration.json  preregistration.md  release_gate.py  release_packet.py  signoff.py
ReClass Model/validation/fixtures/: development_manifest.json  holdout_manifest.json  holdout_smoke_v1.json  synthetic_v1.json  validation_manifest.json
ReClass Model/worklist/: __init__.py  case.py
