[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reclass"
version = "0.1.0"
description = "ReClass — standardized, reproducible, auditable ACMG/AMP variant (re)classification engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "ReClass" }]
# The pure scoring engine has NO third-party runtime dependencies (that is a design
# invariant). The service, persistence, and dev tooling layers pull theirs from the
# optional extras below, so `pip install reclass` stays minimal and offline-friendly.
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2", "httpx2>=2.4,<3"]
db = ["psycopg[binary]>=3.1"]
dev = ["ruff>=0.5", "mypy>=1.8", "pytest>=8"]

[project.scripts]
reclass = "cli:main"

# The repository directory name contains a space ("ReClass Model"), so packages are
# listed explicitly rather than auto-discovered. The generic top-level package names
# are kept (engine, evidence, ...) to avoid a sweeping import rename; a future move to
# a single `reclass` namespace package is tracked in gap.md D1.
[tool.setuptools]
py-modules = ["cli", "scoring"]
packages = [
    "api",
    "api.routers",
    "db",
    "engine",
    "evidence",
    "ingest",
    "monitoring",
    "ops",
    "reporting",
    "storage",
    "validation",
]

[tool.setuptools.package-data]
engine = ["configs/*.json"]
api = ["openapi.json"]

# --------------------------------------------------------------------------- #
# Lint (ruff) — gap.md D2                                                      #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["data", "plots", "validation/fixtures", "validation/reports"]

[tool.ruff.lint]
# Correctness (F, E9), pyflakes/pycodestyle errors and warnings (E, W), import
# hygiene (I), modernizations (UP) that the codebase already satisfies. Keep the set
# green-able; stricter families (B, SIM, ANN) can be layered in incrementally.
select = ["E", "F", "W"]

# --------------------------------------------------------------------------- #
# Type checking (mypy) — gap.md D2                                            #
# --------------------------------------------------------------------------- #
# The pure scoring engine plus the service/persistence layer are gated here.
# Non-target transitive imports owned by evidence/validation/reporting jobs are
# skipped so this check stays scoped to Job 3 packages.
[tool.mypy]
python_version = "3.11"
files = ["engine", "api", "storage"]
ignore_missing_imports = true
follow_imports = "skip"
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true

# engine.reference and engine.normalize carry pre-existing reference-genome / indel
# left-alignment code whose variable reuse needs a typing refactor. They are typed
# INCREMENTALLY: explicitly named here (not blanket-ignored) so the gate stays honest
# and the rest of the scoring/config core is held type-clean.
[[tool.mypy.overrides]]
module = ["engine.reference", "engine.normalize"]
ignore_errors = true
